--- a/tools/install
+++ b/tools/install
@@ -11,6 +11,9 @@ echo alias tt=\"cd ${rootpath}/tools\"           >> ~/.cassobee_config
 echo alias ss=\"cd ${rootpath}/source\"          >> ~/.cassobee_config
 echo alias uu=\"cd ${rootpath}/common\"          >> ~/.cassobee_config
 echo alias dd=\"cd ${rootpath}/debug\"           >> ~/.cassobee_config
+echo alias bb=\"cd ${rootpath}/build\"           >> ~/.cassobee_config
+echo alias pp=\"cd ${rootpath}/progen\"          >> ~/.cassobee_config
 echo alias trace=\"cd ${rootpath}/debug/logdir\" >> ~/.cassobee_config
+echo alias third=\"cd ${rootpath}/thirdparty\"   >> ~/.cassobee_config
 
 #echo source ~/.cassobee_config >> ~/.bash_profile
