--- a/tools/install
+++ b/tools/install
@@ -4,7 +4,7 @@ rootpath=$(cd $(dirname $0) && cd ..; pwd)
 
 echo ${rootpath}
 
-echo export PATH=$PATH:${rootpath}/tool           > ~/.cassobee_config
+echo export PATH=$PATH:${rootpath}/tools          > ~/.cassobee_config
 echo ''                                          >> ~/.cassobee_config
 echo alias ca=\"cd ${rootpath}\"                 >> ~/.cassobee_config
 echo alias tt=\"cd ${rootpath}/tools\"           >> ~/.cassobee_config
@@ -16,4 +16,10 @@ echo alias pp=\"cd ${rootpath}/progen\"          >> ~/.cassobee_config
 echo alias trace=\"cd ${rootpath}/debug/logdir\" >> ~/.cassobee_config
 echo alias third=\"cd ${rootpath}/thirdparty\"   >> ~/.cassobee_config
 
-#echo source ~/.cassobee_config >> ~/.bash_profile
+setup_pretty_printer
+
+if ! grep -Fxq "source ~/.cassobee_config" ~/.bash_profile; then
+    echo 'source ~/.cassobee_config' >> ~/.bash_profile
+fi
+
+source ~/.bash_profile
