--- a/tools/install
+++ b/tools/install
@@ -11,6 +11,7 @@ echo export PATH=$PATH:${rootpath}/build_tool	  > ~/.cassobee_config
 echo ''                                          >> ~/.cassobee_config
 echo alias ca=\"cd ${rootpath}\"                 >> ~/.cassobee_config
 echo alias tt=\"cd ${rootpath}/tools\"           >> ~/.cassobee_config
+echo alias cfg=\"cd ${rootpath}/config\"         >> ~/.cassobee_config
 echo alias ss=\"cd ${rootpath}/source\"          >> ~/.cassobee_config
 echo alias uu=\"cd ${rootpath}/source/bee/\"	 >> ~/.cassobee_config
 echo alias dd=\"cd ${rootpath}/debug\"           >> ~/.cassobee_config
